// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A <h1> Heading 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 2.25rem;
}

.c1 {
  color: #262D33;
}

<h1
  className="c0 c1"
  fontFamily="brand"
  fontSize="xxlarge"
  fontWeight="normal"
>
  🥑
</h1>
`;

exports[`A <h1> Heading sized to <h2> 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c1 {
  color: #262D33;
}

<h1
  className="c0 c1"
  fontFamily="brand"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h1>
`;

exports[`A Heading to bold 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.5rem;
}

.c1 {
  color: #262D33;
}

<h2
  className="c0 c1"
  fontFamily="brand"
  fontSize="large"
  fontWeight="bold"
>
  🥑
</h2>
`;

exports[`A Heading transformed 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c1 {
  text-transform: capitalize;
  color: #262D33;
}

<h2
  className="c0 c1"
  fontFamily="brand"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A Heading truncated 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c1 {
  color: #262D33;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<h2
  className="c0 c1"
  fontFamily="brand"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A Heading with multiline truncate 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c1 {
  color: #262D33;
  -webkit-box-orient: vertical;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  overflow: hidden;
}

<h2
  className="c0 c1"
  fontFamily="brand"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A Heading with variant 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c1 {
  color: #939BA5;
}

<h2
  className="c0 c1"
  fontFamily="brand"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A default Heading 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c1 {
  color: #262D33;
}

<h2
  className="c0 c1"
  fontFamily="brand"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h2>
`;
